oriterm_core/tests/vttest/snapshots/vttest__menu6__80x24_06_sub1_01.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
This is a test of the ANSWERBACK MESSAGE. (To load the A.B.M.                   
see the TEST KEYBOARD part of this program). Below here, the                    
current answerback message in your terminal should be                           
displayed. Finish this test with RETURN.
