oriterm_core/tests/vttest/snapshots/vttest__menu6__80x24_06_sub2_03.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
Test of LineFeed/NewLine mode.                                                  
                                                                                
NewLine mode set. Push the RETURN key:                                          
 <13> <10>  -- OK                                                               
                                                                                
NewLine mode reset. Push the RETURN key:                                        
 <13>  -- OK                                                                    
                                                                                
Push <RETURN>
