oriterm_core/tests/vttest/snapshots/vttest__menu6__80x24_06_sub3_01.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
Test of Device Status Report 5 (report terminal status).                        
Report is: <27> [ 0 n  -- means "TERMINAL OK"                                   
                                                                                
Test of Device Status Report 6 (report cursor position).                        
Report is: <27> [ 5 ; 1 R  -- OK                                                
                                                                                
                                                                                
Report is: <27> [ 5 ; 1 R  -- OK                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Push <RETURN>
