oriterm_core/tests/vttest/snapshots/vttest__menu6__80x24_06_sub6_02.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
Testing Tertiary Device Attributes (unit ID)                                    
                                                                                
          <13>  failed                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Push <RETURN>
